@startuml

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

' =========================
' CORE ENTITIES
' =========================

class Movie {
    - title : string
    - language : string
    - duration : int
    --
    + getTitle() : string
    + getLanguage() : string
    + getDuration() : int
}

class Seat {
    - seatNumber : string
    - seatType : string
    --
    + getSeatNumber() : string
    + getSeatType() : string
}

class Screen {
    - screenNumber : int
    - seats : vector<Seat>
    --
    + addSeat(seat : Seat) : void
    + getSeats() : vector<Seat>
}

class Cinema {
    - name : string
    - screens : vector<Screen>
    --
    + addScreen(screen : Screen) : void
    + getScreens() : vector<Screen>
}

class Show {
    - movie : Movie
    - screen : Screen
    - startTime : string
    - showSeats : vector<ShowSeat>
    --
    + displaySeats() : void
    + getMovie() : Movie
    + getScreen() : Screen
    + getStartTime() : string
    + getShowSeats() : vector<ShowSeat>
}

class ShowSeat {
    - seat : Seat
    - status : string
    --
    + book() : void
    + release() : void
    + isAvailable() : bool
    + getSeatNumber() : string
    + getSeatType() : string
    + getStatus() : string
}

class Customer {
    - name : string
    - phone : string
    --
    + getName() : string
    + getPhone() : string
}

class Booking {
    - bookingId : int
    - customer : Customer
    - show : Show
    - seats : vector<ShowSeat>
    - totalAmount : double
    - status : string
    --
    + confirm() : void
    + cancel() : void
    + getBookingId() : int
    + getTotalAmount() : double
    + getStatus() : string
}

' =========================
' PAYMENT
' =========================

abstract class Payment {
    --
    + pay(amount : double) : bool
}

class UpiPayment {
    + pay(amount : double) : bool
}

class CardPayment {
    + pay(amount : double) : bool
}

class CashPayment {
    + pay(amount : double) : bool
}

' =========================
' SERVICES
' =========================

class PriceCalculator {
    + calculate(seats : vector<ShowSeat>) : double
}

class TicketPrinter {
    + print(booking : Booking) : void
}

class BookingService {
    + bookTicket() : Booking
    + cancelBooking(booking : Booking) : void
}

' =========================
' RELATIONSHIPS
' =========================

' Composition
Cinema "1" *-- "1..*" Screen : owns
Screen "1" *-- "1..*" Seat : owns
Show "1" *-- "1..*" ShowSeat : owns

' Aggregation
Show "1" o-- "1" Movie : uses
Show "1" o-- "1" Screen : uses
Booking "1" o-- "1..*" ShowSeat : contains

' Association
ShowSeat "1" --> "1" Seat : represents
Booking "1" --> "1" Customer : made by
Booking "1" --> "1" Show : for

' Inheritance
Payment <|-- UpiPayment
Payment <|-- CardPayment
Payment <|-- CashPayment

' Service dependencies
BookingService --> Booking : creates
BookingService --> PriceCalculator : uses
BookingService --> Payment : uses
BookingService --> TicketPrinter : uses

@enduml